--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@ body {
 }
 
 nav {
-  background-color: #212e3e;
+  background-color: #232f3e;
   padding: 1rem 1rem;
 }
 
@@ -47,7 +47,7 @@ nav {
 
 #login_btn,
 #view_btn {
-  background-color: #ff4c4c;
+  background-color: #febd69;
   padding: 0.4rem 1.8rem;
   font-family: calibri;
 }
@@ -58,7 +58,7 @@ nav {
 }
 
 #cart_count {
-  background-color: #ff4c4c;
+  background-color: #febd69;
   padding: 0.2rem 0.5rem;
   border-radius: 0.2rem;
   color: black;
@@ -93,7 +93,7 @@ nav {
 }
 
 #view_btn {
-  background-color: #ff4c4c;
+  background-color: #fa9c23;
   color: white;
 }
 
@@ -613,27 +613,4 @@ ul.CTAs a {
 .review_user {
   font-size: 0.8rem;
   color: grey;
-}
-
-.loader {
-  position: relative;
-  width: 100px;
-  height: 100px;
-}
-
-.loader:before , .loader:after{
-  content: '';
-  border-radius: 50%;
-  position: absolute;
-  inset: 0;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3) inset;
-}
-.loader:after {
-  box-shadow: 0 2px 0 #FF3D00 inset;
-  animation: rotate 2s linear infinite;
-}
-
-@keyframes rotate {
-  0% {  transform: rotate(0)}
-  100% { transform: rotate(360deg)}
 }
